# dramatiq_kafka

./: .gitignore  README.md  pyproject.toml
django_example/: db.sqlite3  manage.py  requirements.txt
django_example/dramatiq_kafka/: asgi.py  settings.py  urls.py  wsgi.py
django_example/example/: asgi.py  settings.py  urls.py
django_example/work/: tasks.py  urls.py  views.py
dramatiq_kafka/: __init__.py  broker.py
