[tool.poetry]
name = "dramatiq-kafka"
version = "0.1.4"
description = "A Kafka broker for Dramatiq."
authors = ["Viktor Babchanik <vbabchanik@ucdavis.edu>"]
readme = "README.md"
packages = [{include = "dramatiq_kafka"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
